# little-sun-gazer

./: .gitignore  .solar.cpp.swp  CMakeLists.txt  EPD_3in7.c  EPD_3in7.h  GUI_Paint.c  GUI_Paint.h  README.md  draw.cpp  font48.c  main.cpp  run_build.sh  solar.cpp  widgets.cpp
ds3231/: CMakeLists.txt  ds3231.c  ds3231.h
utils/: sleep.cpp  time_utils.cpp
